package com.example.lab5.model;

public interface Observer {
    void update();
}